[package]
name = "bitfield-register"
version = "0.1.2"
authors = ["Anper @ Kviver team <mail@s3f.ru>"]
description = "Rust bitfield library for low-level registers"
license-file = "LICENSE"
license = "BSD-2-Clause"
repository = "https://github.com/kviver/bitfield-register"

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[lib]
proc-macro = true