[package]
name = "bitfield-register"
version = "0.2.1"
description = "Rust bitfield library for low-level registers"
authors = [
    "Anper @ Kviver team <mail@s3f.ru>",
    "Mikhail Cheshkov @ Kviver team <mcheshkov@gmail.com>"
]
license = "MIT"
repository = "https://github.com/kviver/bitfield-register"

[dependencies]
bitfield-register-macro = { version = "0.2.0", path = "../bitfield-register-macro" }

[badges]
travis-ci = { repository = "kviver/bitfield-register" }
