[package]
name = "bitfield-register-tests"
version = "0.1.0"
description = "Rust bitfield library for low-level registers, test suite"
authors = [
    "Anper @ Kviver team <mail@s3f.ru>",
    "Mikhail Cheshkov @ Kviver team <mcheshkov@gmail.com>"
]
license = "MIT"
repository = "https://github.com/kviver/bitfield-register"

[dependencies]
bitfield-register = { version = "0.1.5", path = "../bitfield-register" }
bitfield-register-macro = { version = "0.1.5", path = "../bitfield-register-macro" }
